2007-02-07 Sarka Todorova <sarka.todorova@cern.ch>
        * inert objects enclosed in envelopes, treated as confined dense volumes
	* tagged MuonTrackingGeometry-00-00-27 

2007-02-01 Sarka Todorova <sarka.todorova@cern.ch>
        * fix slc4 compilation error
	* tagged MuonTrackingGeometry-00-00-26 

2007-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* layer representation added for stations (without material at the moment)
	* bugfix in MTGB 
	* improved identification, tube reference position 
	* tagged MuonTrackingGeometry-00-00-25

2006-12-18 Sarka Todorova <sarka.todorova@cern.ch>
	* cleanup
	* tagged MuonTrackingGeometry-00-00-24

2006-11-29 Sarka Todorova <sarka.todorova@cern.ch>
	* CSC/TGC active layers added (one per gas gap)
	* tagged MuonTrackingGeometry-00-00-23
	
2006/11/12 Sarka Todorova <sarka.todorova@cern.ch>
	* complete transcript of inert material from GeoModel
	* MTGB handling of subtracted/combined volumes (span) 
	* tagged MuonTrackingGeometry-00-00-22 

2006/10/17 Sarka Todorova <sarka.todorova@cern.ch>
	* fix MIMB for SLC4 ( bug reintroduced in the previous update)
	* clean-up, remove TrkParameters include 
	* tagged MuonTrackingGeometry-00-00-21 

2006/10/16 Sarka Todorova <sarka.todorova@cern.ch>
	* RPC split into layers + identification
	* clean-up, remove TrkEvPrimitives dependency 
	* tagged MuonTrackingGeometry-00-00-20 

2006/10/10 Sarka Todorova <sarka.todorova@cern.ch>
	* follow change of interface to TrackingGeometry 
	* tagged MuonTrackingGeometry-00-00-19 

2006/10/05 Sarka Todorova <sarka.todorova@cern.ch>
	* fix typo in MuonStationTypeBuilder 
	* tagged MuonTrackingGeometry-00-00-18 

2006/10/02 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix of phi range in MuonTrackingGeometryBuilder 
	* tagged MuonTrackingGeometry-00-00-17 

2006/09/29 Sarka Todorova <sarka.todorova@cern.ch>
	* temporary fix for const TrackingVolume* <-> TrackingVolume* conversion
	* suppress printout in MuonStationTypeBuilder