@@ -1,3 +1,8 @@
+2007-02-12 Sarka Todorova <sarka.todorova@cern.ch>
+	* bugfix (station name abbreviation)
+	* detailed layer identification optional
+	* tagged MuonTrackingGeometry-00-00-28
+
 2007-02-07 Sarka Todorova <sarka.todorova@cern.ch>
         * inert objects enclosed in envelopes, treated as confined dense volumes
 	* tagged MuonTrackingGeometry-00-00-27 
